<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Peck LLC.
  ~ All rights reserved.
  -->

<resources>

    <string name="app_name">Peck</string>
    <string name="app_id">291944037642057</string> <!-- facebook app id -->
    <string name="app_process_name">peck</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="bt_login">@string/login</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_create_acct">Create</string>
    <string name="bt_acct_suggest">Need an account?</string>
    <string name="bt_event">Event</string>
    <string name="name_activity_feed_root">FeedRoot</string>
    <string name="tb_home">Home</string>
    <string name="tb_newsfeed">News Feed</string>
    <string name="tb_diningfeed">Dining</string>
    <string name="tb_profile">Profile</string>
    <string name="tb_circles">Circles</string>
    <string name="title_activity_locale">LocaleActivity</string>
    <string name="desc_iv_profile">Profile Picture</string>
    <string name="tv_findLocale">Where are you?</string>
    <string name="pb_working">Working</string>
    <string name="pb_loc">Locating You</string>
    <string name="tb_newpost">New Post</string>
    <string name="tb_pecks">Pecks</string>
    <string name="newPost">New Post</string>
    <string name="newCircle">New Circle</string>

    <string name="bt_announcement">Announcement</string>
    <string name="bt_photo">Photo</string>
    <string name="bt_share">select shares</string>
    <string name="bt_peck_login">Login To Peck</string>
    <string name="bt_post">Post</string>

    <string name="ht_np_title">Title</string>
    <string name="ht_yourname">Your Name</string>

    <string name="bt_peck_logout">Logout</string>
    <string name="bt_retry">Retry</string>
    <string name="tv_retry">Couldn\'t download localization data.</string>
    <string name="tv_content_not_available">content unavailable at this time</string>



</resources>
