<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/tab_ll">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/iv_select"
        android:src="@drawable/ic_peck"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_post_height"
            android:text="@string/bt_event"
            android:id="@+id/bt_event"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_post_height"
            android:text="@string/bt_announcement"
            android:id="@+id/bt_announce"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/post_content"
        android:layout_weight="1" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_post"
        android:id="@+id/bt_post"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />


</LinearLayout>